# SIFT3D

./: .gitignore  CHANGES.md  CMakeLists.txt  LICENSE  README.md  SIFT3DConfig.cmake.in  SIFT3DConfigVersion.cmake.in  TODO
cli/: CMakeLists.txt  denseSift3D.c  diffeoSift3D.c  kpSift3D.c  regSift3D.c
cmake/: FindMatlab.cmake  FindMingw.cmake  FindNIFTI.cmake  FindOpenMP.cmake  SIFT3DPackage.cmake
doc/: INSTALL_LINUX.md  INSTALL_MAC.md  INSTALL_WINDOWS.md
examples/: CMakeLists.txt  featuresC.c  featuresMatlab.m  ioC.c  ioMatlab.m  ioPython.py  manualFeaturesMatlab.m  registerC.c  registerMatlab.m
imutil/: CMakeLists.txt  dicom.cpp  dicom.h  dicom.hpp  immacros.h  imtypes.h  imutil.c  imutil.h  kernels.cl  macros.h  nifti.c  nifti.h  types.h
imutil/templates/: CMakeLists.txt  sep_fir_3d.template
itkwrap/: CMakeLists.txt
reg/: CMakeLists.txt  ransac_test.c  reg.c  reg.h  siftreg.c
sift3d/: .so.0.1  CMakeLists.txt  driver.c  sift.c  sift.h
wrappers/: CMakeLists.txt
wrappers/matlab/: CMakeLists.txt  README.md  Sift3DParser.m  Sift3DTest.m  checkUnits3D.m  detectSift3D.m  extractSift3D.m  imRead3D.m  imWrite3D.m  keypoint.m  keypoint3D.m  matchSift3D.m  mexDetectSift3D.c  mexExtractSift3D.c  mexImRead3D.c  mexImWrite3D.c  mexMatchSift3D.c  mexOrientation3D.c  mexRegisterSift3D.c  mexutil.c  mexutil.h  orientation3D.m  registerSift3D.m  setupSift3D.m
wrappers/python/: CMakeLists.txt  README.md  setup.py  sift3dpython.c
wrappers/python/pySift3D/: CMakeLists.txt  __init__.py  imutil.py
